--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>オリジナルサイト</h1>
-  <p>はじめてのオリジナルサイトです！オリジナルサイトです！</p>
+  <p>はじめてのオリジナルサイトです！オリジナルサイトです！ようやく完成です！</p>
 </body>
 </html>
