--- a/index.html
+++ b/index.html
@@ -2,11 +2,74 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>オリジナルサイト</title>
+  <title>ECサイトサンプル - 店名</title>
+  <link rel="icon" href="favicon.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>オリジナルサイト</h1>
-  <p>はじめてのオリジナルサイトです！オリジナルサイトです！ようやく完成です！</p>
+  <div class="container">
+    <header>
+      <h1>
+        <img src="iogo.png" width="168" height="48" alt="ECサイトサンプル">
+      </h1>
+    </header>
+
+    <section class="products">
+      <h2>Our Puroducts</h2>
+      <ul>
+        <li> 
+          <a href="product-1.html">
+          <img src="puroduct-1.png" width="400" height="400" alt="ECサイトサンプル">
+          <h3>ECサイトサンプル</h3>
+          <p>1,000円</p>
+          </a>
+        </li>
+        <li>
+          <a href="product-2.html">
+            <img src="puroduct-2.png" width="400" height="400" alt="ECサイトサンプル">
+            <h3>ECサイトサンプル</h3>
+            <p>5,000円</p>
+        </a>
+         
+        </li>
+        <li>
+          <a href="product-3.html">
+            <img src="puroduct-3.png" width="400" height="400" alt="ECサイトサンプル">
+            <h3>ECサイトサンプル</h3>
+            <p>10,000円</p>
+          </a>
+        </li>
+        <li>
+          <a href="product-4.html">
+            <img src="puroduct-4.png" width="400" height="400" alt="ECサイトサンプル">
+            <h3>ECサイトサンプル</h3>
+            <p>15,000円</p>
+          </a>
+        </li>
+        <li>
+          <a href="product-5.html">
+            <img src="puroduct-5.png" width="400" height="400" alt="ECサイトサンプル">
+            <h3>ECサイトサンプル</h3>
+            <p>20,000円</p>
+          </a>
+        </li>
+        <li>
+          <a href="product-6.html">
+            <img src="puroduct-6.png" width="400" height="400" alt="ECサイトサンプル">
+            <h3>ECサイトサンプル</h3>
+            <p>50,000円</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <small>(c) sample.com</small>
+
+    </footer>
+  </div>
+
 </body>
 </html>
